--- a/package.json
+++ b/package.json
@@ -18,10 +18,16 @@
     "babel-plugin-styled-components": "^1.13.2",
     "bootstrap": "^5.0.2",
     "gatsby": "^3.10.2",
+    "gatsby-image": "^3.10.0",
+    "gatsby-image-background-slider": "^0.0.4",
     "gatsby-plugin-gatsby-cloud": "^2.10.1",
     "gatsby-plugin-react-helmet": "^4.10.0",
+    "gatsby-plugin-sharp": "^3.10.2",
     "gatsby-plugin-styled-components": "^4.10.0",
+    "gatsby-source-filesystem": "^3.10.0",
+    "gatsby-transformer-sharp": "^3.10.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
