--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.13.2",
     "bootstrap": "^5.0.2",
+    "font-face": "^2.3.4",
     "gatsby": "^3.10.2",
     "gatsby-image": "^3.10.0",
     "gatsby-image-background-slider": "^0.0.4",
@@ -31,6 +32,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "react-ticker": "^1.2.2",
     "styled-components": "^5.3.0"
   }
 }
