--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-image": "^3.10.0",
     "gatsby-image-background-slider": "^0.0.4",
     "gatsby-plugin-gatsby-cloud": "^2.10.1",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-react-helmet": "^4.10.0",
     "gatsby-plugin-sharp": "^3.10.2",
     "gatsby-plugin-styled-components": "^4.10.0",
