--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@vime/react": "^5.0.33",
     "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.13.2",
     "bootstrap": "^5.0.2",
@@ -24,17 +25,22 @@
     "gatsby-image-background-slider": "^0.0.4",
     "gatsby-plugin-gatsby-cloud": "^2.10.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-react-helmet": "^4.10.0",
     "gatsby-plugin-sharp": "^3.10.2",
     "gatsby-plugin-styled-components": "^4.10.0",
     "gatsby-source-filesystem": "^3.10.0",
+    "gatsby-source-youtube-v3": "^3.0.2",
     "gatsby-transformer-sharp": "^3.10.0",
-    "react": "^17.0.1",
+    "gatsby-video": "^0.2.0",
+    "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "react-player": "^2.9.0",
     "react-ticker": "^1.2.2",
+    "react-video-tag": "^0.0.10",
     "styled-components": "^5.3.0"
   }
 }
