--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "react-is": "^17.0.2",
     "react-player": "^2.9.0",
     "react-ticker": "^1.2.2",
     "styled-components": "^5.3.0"
