--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-icons": "^4.2.0",
     "react-is": "^17.0.2",
     "react-player": "^2.9.0",
+    "react-player-controls": "^1.1.0",
     "react-ticker": "^1.2.2",
     "styled-components": "^5.3.0"
   }
