--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "babel-plugin-styled-components": "^1.13.2",
     "bootstrap": "^5.0.2",
     "font-face": "^2.3.4",
