--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.13.2",
     "bootstrap": "^5.0.2",
     "font-face": "^2.3.4",
@@ -29,6 +30,7 @@
     "gatsby-plugin-react-helmet": "^4.10.0",
     "gatsby-plugin-sharp": "^3.10.2",
     "gatsby-plugin-styled-components": "^4.10.0",
+    "gatsby-plugin-trigger-deploy": "^0.0.2",
     "gatsby-source-filesystem": "^3.10.0",
     "gatsby-source-youtube-v3": "^3.0.2",
     "gatsby-transformer-sharp": "^3.10.0",
