--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby": "^3.10.2",
     "gatsby-image": "^3.10.0",
     "gatsby-image-background-slider": "^0.0.4",
+    "gatsby-plugin-favicons": "^2.0.0",
     "gatsby-plugin-gatsby-cloud": "^2.10.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mailchimp": "^5.2.2",
