--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "gatsby-source-youtube-v3": "^3.0.2",
     "gatsby-transformer-sharp": "^3.10.0",
     "gatsby-video": "^0.2.0",
+    "pretty-checkbox": "^3.0.3",
+    "pretty-checkbox-react": "^3.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.1",
