--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@formspree/react": "^2.2.4",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "ads.txt": "^0.4.0",
     "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.13.2",
     "bootstrap": "^5.0.2",
