--- a/package.json
+++ b/package.json
@@ -19,41 +19,41 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@formspree/react": "^2.2.4",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
+    "@formspree/react": "^2.2.5",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "ads.txt": "^0.4.0",
-    "axios": "^0.21.1",
-    "babel-plugin-styled-components": "^1.13.2",
-    "bootstrap": "^5.0.2",
+    "axios": "^0.27.2",
+    "babel-plugin-styled-components": "^2.0.7",
+    "bootstrap": "^5.1.3",
     "font-face": "^2.3.4",
-    "gatsby": "^3.10.2",
+    "gatsby": "^4.16.0",
     "gatsby-image": "^3.10.0",
     "gatsby-image-background-slider": "^0.0.4",
-    "gatsby-plugin-gatsby-cloud": "^2.10.1",
+    "gatsby-plugin-gatsby-cloud": "^4.16.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mailchimp": "^5.2.2",
-    "gatsby-plugin-manifest": "^3.13.0",
-    "gatsby-plugin-react-helmet": "^4.10.0",
-    "gatsby-plugin-sharp": "^3.10.2",
-    "gatsby-plugin-styled-components": "^4.10.0",
+    "gatsby-plugin-manifest": "^4.16.0",
+    "gatsby-plugin-react-helmet": "^5.16.0",
+    "gatsby-plugin-sharp": "^4.16.0",
+    "gatsby-plugin-styled-components": "^5.16.0",
     "gatsby-plugin-trigger-deploy": "^0.0.2",
-    "gatsby-source-contentful": "^5.13.0",
-    "gatsby-source-filesystem": "^3.10.0",
+    "gatsby-source-contentful": "^7.14.0",
+    "gatsby-source-filesystem": "^4.16.0",
     "gatsby-source-youtube-v3": "^3.0.2",
-    "gatsby-transformer-sharp": "^3.10.0",
+    "gatsby-transformer-sharp": "^4.16.0",
     "gatsby-video": "^0.2.0",
     "pretty-checkbox": "^3.0.3",
     "pretty-checkbox-react": "^3.2.0",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-beta.4",
-    "react-dom": "^17.0.1",
+    "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
+    "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.2.0",
-    "react-is": "^17.0.2",
-    "react-player": "^2.9.0",
+    "react-icons": "^4.4.0",
+    "react-is": "^18.1.0",
+    "react-player": "^2.10.1",
     "react-player-controls": "^1.1.0",
-    "react-ticker": "^1.2.2",
-    "styled-components": "^5.3.0"
+    "react-ticker": "^1.3.2",
+    "styled-components": "^5.3.5"
   }
 }
