--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.27.2",
     "babel-plugin-styled-components": "^2.0.7",
     "bootstrap": "^5.1.3",
+    "check-peer-dependencies": "^4.1.0",
     "font-face": "^2.3.4",
     "gatsby": "^4.16.0",
     "gatsby-image": "^3.10.0",
@@ -41,12 +42,12 @@
     "gatsby-transformer-sharp": "^4.16.0",
     "pretty-checkbox": "^3.0.3",
     "pretty-checkbox-react": "^3.2.0",
-    "react": "^18.1.0",
+    "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
-    "react-dom": "^18.1.0",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
-    "react-is": "^18.1.0",
+    "react-is": "^17.0.2",
     "react-player": "^2.10.1",
     "react-ticker": "^1.3.2",
     "styled-components": "^5.3.5"
