--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-image": "^3.10.0",
     "gatsby-plugin-gatsby-cloud": "^4.16.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-image": "^2.16.0",
     "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-manifest": "^4.16.0",
     "gatsby-plugin-react-helmet": "^5.16.0",
