--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby": "^4.16.0",
     "gatsby-image": "^3.10.0",
     "gatsby-plugin-gatsby-cloud": "^4.16.0",
+    "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^2.16.0",
     "gatsby-plugin-mailchimp": "^5.2.2",
