--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "gatsby-source-filesystem": "^4.16.0",
     "gatsby-source-youtube-v3": "^3.0.2",
     "gatsby-transformer-sharp": "^4.16.0",
+    "latest": "^0.2.0",
+    "n": "^9.1.0",
     "pretty-checkbox": "^3.0.3",
     "pretty-checkbox-react": "^3.2.0",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
     "react-is": "^17.0.2",
