--- a/public/assets-manifest.json
+++ b/public/assets-manifest.json
@@ -10,16 +10,19 @@
   "545f34e4.js": "545f34e4-65c65831ac5fb68d947a.js",
   "589-b956bef8aea6c5bab428.js": "589-b956bef8aea6c5bab428.js",
   "589-b956bef8aea6c5bab428.js.map": "589-b956bef8aea6c5bab428.js.map",
+  "app-1abd5367c4c08769eb91.js.LICENSE.txt": "app-1abd5367c4c08769eb91.js.LICENSE.txt",
+  "app-1abd5367c4c08769eb91.js.map": "app-1abd5367c4c08769eb91.js.map",
   "app-2b278c8eccdf80c551f7.js.LICENSE.txt": "app-2b278c8eccdf80c551f7.js.LICENSE.txt",
   "app-2b278c8eccdf80c551f7.js.map": "app-2b278c8eccdf80c551f7.js.map",
   "app-5d3392d471f9945cf1df.js.LICENSE.txt": "app-5d3392d471f9945cf1df.js.LICENSE.txt",
   "app-5d3392d471f9945cf1df.js.map": "app-5d3392d471f9945cf1df.js.map",
   "app-ed9fccdd3adc278c2960.js.LICENSE.txt": "app-ed9fccdd3adc278c2960.js.LICENSE.txt",
   "app-ed9fccdd3adc278c2960.js.map": "app-ed9fccdd3adc278c2960.js.map",
-  "app.js": "app-2b278c8eccdf80c551f7.js",
+  "app.js": "app-1abd5367c4c08769eb91.js",
   "commons-32783125a1141c9a4a57.js.map": "commons-32783125a1141c9a4a57.js.map",
   "commons-734f2a39783b8a47fdd6.js.map": "commons-734f2a39783b8a47fdd6.js.map",
-  "commons.js": "commons-734f2a39783b8a47fdd6.js",
+  "commons-d9745e4926ebf5ff7f1e.js.map": "commons-d9745e4926ebf5ff7f1e.js.map",
+  "commons.js": "commons-d9745e4926ebf5ff7f1e.js",
   "component---src-pages-404-js-baccb3009b8e59c37dfd.js.map": "component---src-pages-404-js-baccb3009b8e59c37dfd.js.map",
   "component---src-pages-404-js-f5a3fbcc6b843bbf28bb.js.map": "component---src-pages-404-js-f5a3fbcc6b843bbf28bb.js.map",
   "component---src-pages-404-js.js": "component---src-pages-404-js-baccb3009b8e59c37dfd.js",
@@ -35,7 +38,8 @@
   "component---src-pages-contact-js.js": "component---src-pages-contact-js-d145010be039ec9190ca.js",
   "component---src-pages-courses-js-1e4d453ec24345e227db.js.map": "component---src-pages-courses-js-1e4d453ec24345e227db.js.map",
   "component---src-pages-courses-js-562e025e3d6dc6fb54c2.js.map": "component---src-pages-courses-js-562e025e3d6dc6fb54c2.js.map",
-  "component---src-pages-courses-js.js": "component---src-pages-courses-js-1e4d453ec24345e227db.js",
+  "component---src-pages-courses-js-59dd4a24db6d131e5db9.js.map": "component---src-pages-courses-js-59dd4a24db6d131e5db9.js.map",
+  "component---src-pages-courses-js.js": "component---src-pages-courses-js-59dd4a24db6d131e5db9.js",
   "component---src-pages-index-js-7afc2cccc0a7c6b36047.js.map": "component---src-pages-index-js-7afc2cccc0a7c6b36047.js.map",
   "component---src-pages-index-js-a3994ba40fd69c5fd9be.js.map": "component---src-pages-index-js-a3994ba40fd69c5fd9be.js.map",
   "component---src-pages-index-js.js": "component---src-pages-index-js-7afc2cccc0a7c6b36047.js",
@@ -53,10 +57,12 @@
   "component---src-pages-tools-js.js": "component---src-pages-tools-js-58437c062f7ebd7403cb.js",
   "component---src-templates-blog-post-index-js-0a4ffce3d63d505a365e.js.map": "component---src-templates-blog-post-index-js-0a4ffce3d63d505a365e.js.map",
   "component---src-templates-blog-post-index-js-674e0a35113505f1a75e.js.map": "component---src-templates-blog-post-index-js-674e0a35113505f1a75e.js.map",
-  "component---src-templates-blog-post-index-js.js": "component---src-templates-blog-post-index-js-674e0a35113505f1a75e.js",
+  "component---src-templates-blog-post-index-js-fe41b9d2b59d2025ac65.js.map": "component---src-templates-blog-post-index-js-fe41b9d2b59d2025ac65.js.map",
+  "component---src-templates-blog-post-index-js.js": "component---src-templates-blog-post-index-js-fe41b9d2b59d2025ac65.js",
   "component---src-templates-paginated-blog-page-index-js-74c9c228132f2cd7709b.js.map": "component---src-templates-paginated-blog-page-index-js-74c9c228132f2cd7709b.js.map",
   "component---src-templates-paginated-blog-page-index-js-7978e28ed97fb3f460f4.js.map": "component---src-templates-paginated-blog-page-index-js-7978e28ed97fb3f460f4.js.map",
-  "component---src-templates-paginated-blog-page-index-js.js": "component---src-templates-paginated-blog-page-index-js-74c9c228132f2cd7709b.js",
+  "component---src-templates-paginated-blog-page-index-js-c886bd68846db112a594.js.map": "component---src-templates-paginated-blog-page-index-js-c886bd68846db112a594.js.map",
+  "component---src-templates-paginated-blog-page-index-js.js": "component---src-templates-paginated-blog-page-index-js-c886bd68846db112a594.js",
   "d7eeaac4-2ff60eb1793b31796522.js.map": "d7eeaac4-2ff60eb1793b31796522.js.map",
   "d7eeaac4-c6373a63ab2e770b75f7.js.map": "d7eeaac4-c6373a63ab2e770b75f7.js.map",
   "d7eeaac4.js": "d7eeaac4-2ff60eb1793b31796522.js",
@@ -80,5 +86,6 @@
   "webpack-runtime-06f64d1a83c0ab2ef56b.js.map": "webpack-runtime-06f64d1a83c0ab2ef56b.js.map",
   "webpack-runtime-34424567f9b58f104a6d.js.map": "webpack-runtime-34424567f9b58f104a6d.js.map",
   "webpack-runtime-93ee2cdc3d409a9dd7fd.js.map": "webpack-runtime-93ee2cdc3d409a9dd7fd.js.map",
-  "webpack-runtime.js": "webpack-runtime-93ee2cdc3d409a9dd7fd.js"
+  "webpack-runtime-c21c4ce0fde05781a800.js.map": "webpack-runtime-c21c4ce0fde05781a800.js.map",
+  "webpack-runtime.js": "webpack-runtime-c21c4ce0fde05781a800.js"
 }
