--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@formspree/react": "^2.2.5",
+    "@formspree/react": "^2.4.4",
     "@parcel/namer-default": "^2.9.3",
     "ads.txt": "^0.4.0",
-    "axios": "^0.27.2",
+    "axios": "^1.4.0",
     "babel-plugin-remove-graphql-queries": "^5.11.0",
-    "babel-plugin-styled-components": "^2.0.7",
-    "bootstrap": "^5.1.3",
-    "check-peer-dependencies": "^4.1.0",
+    "babel-plugin-styled-components": "^2.1.4",
+    "bootstrap": "^5.3.0",
+    "check-peer-dependencies": "^4.2.0",
+    "contentful": "^10.3.1",
     "font-face": "^2.3.4",
     "gatsby": "^5.11.0",
     "gatsby-image": "^3.10.0",
@@ -54,7 +55,7 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.4.0",
+    "react-icons": "^4.10.1",
     "react-is": "^18.2.0",
     "react-player": "^2.10.1",
     "react-ticker": "^1.3.2",
